--- a/style.css
+++ b/style.css
@@ -1,95 +1,44 @@
-body { 
-    background-image: url(Imagens/wallpaper2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    overflow: hidden;
-    margin: 0 0 0 0;
+@charset "UTF-8";
+body {
+    margin: 0px; 
+    background-color: blue;
+    text-align: center;
+    display: grid;
 }
-#navbarbody { 
-    position: fixed;
+header { 
+        display: block;
+        color: white;
+        background-color: rgb(89, 42, 165);
+        width: 100%;
+        height: 100px;
+        position: fixed;
+        z-index: 1;
 }
-#navbar { 
-    margin: 0 0 0 0 ;
-    position: fixed;
-    background-color: rgb(92, 1, 1);
-    height: 90px;
+a { 
+    color: white;
+}
+nav {
+    display: block;
+    color: white;
+    background-color: brown;
     width: 100%;
-    border: 2px solid rgb(83, 0, 0);
-}
-#logo { 
+    height: 20px;
     position: absolute;
-    top: 50%;   
-    left: 3%;
-    transform: translate(-50%, -50%);
+    bottom: 0px;
 }
-#itens-hover-div { 
+main {
     position: absolute;
-    top: 50%;   
-    left: 11%;
-    transform: translate(-50%, -50%);
-    margin-left: 100px;
-}
-
-#itens-hover-lista {
-    color: rgb(255, 255, 255);
-    font-family: "Arvo", 'Courier New', Courier, monospace;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-size: 16px; 
-    display: flex;
-    gap: 28px;
-}
-#icones {
-    position: absolute;
-    display: flex;
-    top: 50%;   
-    left: 92%;
-    transform: translate(-50%, -50%);
-    gap: 20px;
-}
-input[type="search"] { 
-    border: 3px solid black;
-    
-    position: absolute;
-    top: 50%;   
-    left: 73%;
-    transform: translate(-50%, -50%);
-    height: 40px;
-    width: 25%;
-}
-#navbar_expansão_corpo { 
-    visibility: hidden;
-    position: absolute;
-    margin-top: 92px;
-    background-color: rgb(92, 1, 1);
-    height: 250px;
+    top: 100px;
+    display: block;
+    background-color: yellow;
     width: 100%;
+    height: fit-content;
+    z-index: 0;
 }
-.itens_navbar_aberta { 
-    position: absolute;
-    margin-left: 10px;
-    width: 40%;
-    height: 240px;
-}
-.itens_navbar_aberta img { 
-    position: absolute;
-    height: 240px;
-    z-index: 1;
-}
-.itens_navbar_aberta ul {
-    list-style-type: none;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    top: 15%;   
-    left: 27%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    color: white; 
-    margin-left: 10px;
-    font-size: 20px;
-}
-#navbar_expansão_blusa { 
-    visibility: hidden;
+footer { 
+    background-color: pink;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 30px;
 }
