--- a/style.css
+++ b/style.css
@@ -9,77 +9,117 @@
 }
 body {
     margin: 0px; 
-    background-image: url(Imagens/wallpaper2.jpg);
+    background-color: rgb(5, 0, 77);
     text-align: center;
+    background-attachment: fixed;
+    background-position: center center;
     
 }
 header { 
         color: white;
-        background-color: rgb(89, 42, 165);
+        background-image: linear-gradient(to right, rgb(100, 0, 182), rgba(120, 0, 218, 0.980), rgb(100, 0, 182) );
         width: 100%;
         height: 11%;
         position: fixed;
         z-index: 1;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+        
 }
 header > img { 
     position: absolute;
-    height: 90px;
-    width: 100px;
+    height: 85px;
+    width: 95px;
     left: 50%;
+    z-index: 1;
     transform: translate(-50%);
+    filter: brightness(130%);
 }
 #links_acesso { 
     position: absolute;
     top: 15px;
-    right: 100px;
-    width: 300px;
-    height: 70px;
-    gap: 10px;
+    right: 0%;
+    width: 8%;
+    height: 53%;
+    gap: 4%;
     display: flex;
     flex-direction: row;
 }
 #links_acesso > input { 
     background-color: rgb(98, 0, 179);
-    margin-top: 13px;
+    margin-top: 2%;
     border: 2px solid gray;
-    width: 200px;
+    width: 50%;
     height: 30px;
+}
+#links_acesso img:hover { 
+    scale: 110%;
+    transition-duration: 0.5s;
 }
 a { 
     color: rgb(190, 119, 119);
 }
 nav {
     color: white;
-    background-color: brown;
+    background-image: linear-gradient(to right, rgb(0, 0, 220), rgba(0, 0, 255, 0.925), rgb(0, 0, 220));
     width: 100%;
-    height: 20px;
+    height: 20%;
     position: absolute;
     bottom: 0px;
+    box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.459);
+    font-size: 18px;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+    border: 1px solid rgb(32, 0, 146);
+}
+nav:hover { 
+    filter: brightness(130%);
+}
+#imagem_exibição_nav { 
+    position: absolute;
+    top:50%;
+    left: 1%;
+    transform: translate(0%, -50%);
+    border: 2px solid white;
+    border-radius: 15px;
+    width: 10%;
+    height: 190px;
+    visibility: hidden;
+    background-image: url(Imagens/wallpaper.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.705);
 }
 main {
     position: absolute;
-    top: 17.5%;
+    top: 18%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: block;
-    width: 70%;
+    width: 95%;
     height: fit-content;
     z-index: 0;
     color: white;
+    background-image: linear-gradient(to right, rgba(120, 0, 218, 0.600), rgba(140, 0, 255, 0.6), rgba(120, 0, 218, 0.600) );
+    border: 3px solid rgba(255, 255, 255, 0.623);
+    border-radius: 25px;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
 }
 main > h1 {
     margin: 0px;
-    font-size: 90px; 
+    font-size: 70px; 
     letter-spacing: 10px;
     font-family:'fanky', arial ;
-    background-color: black;
-    border-radius: 25px;
+    font-variant: small-caps;
+    text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.80);
 }
 footer { 
-    background-color: rgb(0, 0, 0);
+    background-image: linear-gradient(to right, rgb(0, 0, 30), rgba(0, 0, 50, 0.925), rgb(0, 0, 30));
+    font-size: 1.5rem;
     position: fixed;
     bottom: 0px;
     width: 100%;
     height: 30px;
     color: white;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.486);
 }
