--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@
     font-family: 'fanky';
     src: url(fontes/FankyBubbleGraffiti-Line.otf);
 }
-body {
+body, html {
     margin: 0px; 
+    height: 100%;
     background-color: rgb(5, 0, 77);
     text-align: center;
     background-attachment: fixed;
@@ -27,17 +28,28 @@ header {
 }
 header > img { 
     position: absolute;
-    height: 85px;
+    height: 80px;
     width: 95px;
     left: 50%;
     z-index: 1;
     transform: translate(-50%);
     filter: brightness(130%);
 }
+@media (max-width: 1440px) { 
+    header > img { 
+        position: absolute;
+        height: 70px;
+        width: 80px;
+        left: 50%;
+        z-index: 1;
+        transform: translate(-50%);
+        filter: brightness(130%);
+    }
+}
 #links_acesso { 
     position: absolute;
     top: 15px;
-    right: 0%;
+    right: 1%;
     width: 8%;
     height: 53%;
     gap: 4%;
@@ -50,6 +62,14 @@ header > img {
     border: 2px solid gray;
     width: 50%;
     height: 30px;
+}
+#links_acesso img { 
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
 }
 #links_acesso img:hover { 
     scale: 110%;
@@ -69,6 +89,16 @@ nav {
     font-size: 18px;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
     border: 1px solid rgb(32, 0, 146);
+    cursor: pointer;
+}
+#nav_aberta { 
+    background-image: linear-gradient(to right, rgb(0, 0, 220), rgb(0, 0, 255), rgb(0, 0, 220));
+    visibility: hidden;
+    position: fixed;
+    top: 103px;
+    width: 100%;
+    height: 23%;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 nav:hover { 
     filter: brightness(130%);
@@ -81,7 +111,7 @@ nav:hover {
     border: 2px solid white;
     border-radius: 15px;
     width: 10%;
-    height: 190px;
+    height: 95%;
     visibility: hidden;
     background-image: url(Imagens/wallpaper.webp);
     background-repeat: no-repeat;
@@ -92,19 +122,17 @@ nav:hover {
 }
 main {
     position: absolute;
-    top: 18%;
+    top:62%;
     left: 50%;
     transform: translate(-50%, -50%);
-    display: block;
-    width: 95%;
-    height: fit-content;
+    width: 99%;
+    height: 100%;
     z-index: 0;
     color: white;
-    background-image: linear-gradient(to right, rgba(120, 0, 218, 0.600), rgba(140, 0, 255, 0.6), rgba(120, 0, 218, 0.600) );
-    border: 3px solid rgba(255, 255, 255, 0.623);
     border-radius: 25px;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
 }
+
 main > h1 {
     margin: 0px;
     font-size: 70px; 
@@ -112,6 +140,25 @@ main > h1 {
     font-family:'fanky', arial ;
     font-variant: small-caps;
     text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.80);
+}
+main > h2 {
+    margin: 0px;
+    font-size: 50px; 
+    letter-spacing: 10px;
+    font-family: arial ;
+    font-variant: small-caps;
+    text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.80);
+}
+#foto_donos { 
+    position: absolute;
+    z-index: 1;
+    background-color: blue;
+    border: 4px solid rgba(120, 0, 218, 0.980);
+    width: 50%;
+    height: 350px;
+    transform: translate(-50%, -50%);
+    top: 35%;
+    left: 50%;
 }
 footer { 
     background-image: linear-gradient(to right, rgb(0, 0, 30), rgba(0, 0, 50, 0.925), rgb(0, 0, 30));
