--- a/style.css
+++ b/style.css
@@ -7,15 +7,26 @@
     font-family: 'fanky';
     src: url(fontes/FankyBubbleGraffiti-Line.otf);
 }
-body, html {
+body {
     margin: 0px; 
     height: 100%;
     background-color: rgb(5, 0, 77);
-    text-align: center;
+    
     background-attachment: fixed;
     background-position: center center;
-    
 }
+::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+
+  ::-webkit-scrollbar-thumb {
+    background: #686868;
+  }
 header { 
         color: white;
         background-image: linear-gradient(to right, rgb(100, 0, 182), rgba(120, 0, 218, 0.980), rgb(100, 0, 182) );
@@ -28,8 +39,8 @@ header {
 }
 header > img { 
     position: absolute;
-    height: 80px;
-    width: 95px;
+    height: 75%;
+    width: 5%;
     left: 50%;
     z-index: 1;
     transform: translate(-50%);
@@ -50,7 +61,7 @@ header > img {
     position: absolute;
     top: 15px;
     right: 1%;
-    width: 8%;
+    width: 250px;
     height: 53%;
     gap: 4%;
     display: flex;
@@ -79,6 +90,7 @@ a {
     color: rgb(190, 119, 119);
 }
 nav {
+    text-align: center;
     color: white;
     background-image: linear-gradient(to right, rgb(0, 0, 220), rgba(0, 0, 255, 0.925), rgb(0, 0, 220));
     width: 100%;
@@ -95,32 +107,75 @@ nav {
     background-image: linear-gradient(to right, rgb(0, 0, 220), rgb(0, 0, 255), rgb(0, 0, 220));
     visibility: hidden;
     position: fixed;
-    top: 103px;
+    top: 11%;
     width: 100%;
-    height: 23%;
+    height: 25%;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 nav:hover { 
     filter: brightness(130%);
 }
-#imagem_exibição_nav { 
+#conteudo { 
+    height: 100%;
+    width: 100%;
     position: absolute;
-    top:50%;
-    left: 1%;
-    transform: translate(0%, -50%);
+    display: flex;
+    flex-direction: row;
+    gap: 1%;
+}
+div.imagem_exibição_nav { 
     border: 2px solid white;
-    border-radius: 15px;
-    width: 10%;
+    border-radius: 10px;
+    width: 12%;
     height: 95%;
-    visibility: hidden;
-    background-image: url(Imagens/wallpaper.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.705);
+    font-family: arial;
+    filter: opacity(150%);
+}
+div.imagem_exibição_nav:hover {
+    scale: 101%;
+    transition-duration: 0.5s;
+    box-shadow: 0px 0px 15px rgb(255, 255, 255);
+    filter: opacity(90%) grayscale(80%);
+    .escrita_exibição_imagem_nav h1 { 
+        filter: brightness(150%);
+        text-decoration: underline;
+        background-color: rgba(0, 0, 0, 0.5);
+        filter: grayscale(0%);
+    } 
+    .escrita_exibição_imagem_nav p { 
+        background-color: rgb(19, 19, 19);
+        filter: grayscale(0%);
+    }
+    
+}
+.escrita_exibição_imagem_nav {
+    text-shadow: 0px 0px 10px black; 
+    text-align: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    bottom: 5%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
+
+.escrita_exibição_imagem_nav h1, p {
+    margin: 2px 0px 0px 0px;
+}
+.escrita_exibição_imagem_nav  h1 {
+    background-color: rgba(0, 0, 0, 0.2);
+    font-size: clamp(1rem, 2vw, 2rem);
+}
+.escrita_exibição_imagem_nav  p {
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: clamp(0.5rem, 2vw, 1.2rem);
 }
 main {
+    text-align: center;
     position: absolute;
     top:62%;
     left: 50%;
@@ -135,30 +190,33 @@ main {
 
 main > h1 {
     margin: 0px;
-    font-size: 70px; 
-    letter-spacing: 10px;
+    font-size: 5rem; 
+    letter-spacing: 1.05rem;
     font-family:'fanky', arial ;
     font-variant: small-caps;
     text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.80);
 }
 main > h2 {
     margin: 0px;
-    font-size: 50px; 
-    letter-spacing: 10px;
+    font-size: 3rem; 
+    letter-spacing: 1.1rem;
     font-family: arial ;
     font-variant: small-caps;
     text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.80);
 }
-#foto_donos { 
-    position: absolute;
+div#foto_home { 
+    position: relative;
     z-index: 1;
     background-color: blue;
-    border: 4px solid rgba(120, 0, 218, 0.980);
-    width: 50%;
-    height: 350px;
+    max-width: 800px;
+    height: 40%;
     transform: translate(-50%, -50%);
-    top: 35%;
+    top: 25%;
     left: 50%;
+    box-shadow: 0px 0px 8px rgb(255, 255, 255);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 footer { 
     background-image: linear-gradient(to right, rgb(0, 0, 30), rgba(0, 0, 50, 0.925), rgb(0, 0, 30));
@@ -169,4 +227,5 @@ footer {
     height: 30px;
     color: white;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.486);
+    text-align: center;
 }
