--- a/style.css
+++ b/style.css
@@ -109,8 +109,10 @@ nav {
     position: fixed;
     top: 11%;
     width: 100%;
-    height: 25%;
+    height: 35%;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 nav:hover { 
     filter: brightness(130%);
@@ -121,12 +123,12 @@ nav:hover {
     position: absolute;
     display: flex;
     flex-direction: row;
-    gap: 1%;
+    gap: 1.4%;
 }
 div.imagem_exibição_nav { 
     border: 2px solid white;
     border-radius: 10px;
-    width: 12%;
+    width: 11%;
     height: 95%;
     background-repeat: no-repeat;
     background-size: cover;
