--- a/style.css
+++ b/style.css
@@ -8,12 +8,9 @@
     src: url(fontes/FankyBubbleGraffiti-Line.otf);
 }
 body {
-    margin: 0px; 
-    height: 100%;
+    margin: 0%; 
     background-color: rgb(5, 0, 77);
-    
-    background-attachment: fixed;
-    background-position: center center;
+    overflow-x: hidden;
 }
 ::-webkit-scrollbar {
     width: 10px;
@@ -29,7 +26,7 @@ body {
   }
 header { 
         color: white;
-        background-image: linear-gradient(to right, rgb(100, 0, 182), rgba(120, 0, 218, 0.980), rgb(100, 0, 182) );
+        background-image: linear-gradient(to right, rgb(100, 0, 182), rgba(110, 0, 196, 0.98), rgb(100, 0, 182) );
         width: 100%;
         height: 11%;
         position: fixed;
@@ -103,6 +100,7 @@ nav {
     border: 1px solid rgb(32, 0, 146);
     cursor: pointer;
 }
+
 #nav_aberta { 
     background-image: linear-gradient(to right, rgb(0, 0, 220), rgb(0, 0, 255), rgb(0, 0, 220));
     visibility: hidden;
@@ -111,8 +109,6 @@ nav {
     width: 100%;
     height: 35%;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    overflow-x: auto;
-    overflow-y: hidden;
 }
 nav:hover { 
     filter: brightness(130%);
@@ -120,28 +116,35 @@ nav:hover {
 #conteudo { 
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: row;
-    gap: 1.4%;
+    flex-wrap: nowrap;
+    gap: 1%;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
-div.imagem_exibição_nav { 
+div.imagem_exibição_nav {
+    position: relative; 
+    top: 50%;
+    left: 7%;
+    transform: translate(-50%, -50%);
     border: 2px solid white;
     border-radius: 10px;
-    width: 11%;
-    height: 95%;
+    width: 13%;
+    height: 90%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.705);
     font-family: arial;
-    filter: opacity(150%);
+    filter: opacity(150%) grayscale(30%);
 }
 div.imagem_exibição_nav:hover {
-    scale: 101%;
+    scale: 100.5%;
     transition-duration: 0.5s;
-    box-shadow: 0px 0px 15px rgb(255, 255, 255);
-    filter: opacity(90%) grayscale(80%);
+    box-shadow: 0px 0px 10px rgb(255, 255, 255);
+    filter: opacity(100%) grayscale(0%);
     .escrita_exibição_imagem_nav h1 { 
         filter: brightness(150%);
         text-decoration: underline;
@@ -160,7 +163,7 @@ div.imagem_exibição_nav:hover {
     position: relative;
     width: 100%;
     height: 100%;
-    bottom: 5%;
+    top: 10%;
     left: 50%;
     transform: translate(-50%, 50%);
 }
@@ -177,19 +180,35 @@ div.imagem_exibição_nav:hover {
     font-size: clamp(0.5rem, 2vw, 1.2rem);
 }
 main {
+    margin-top: 6%;
     text-align: center;
-    position: absolute;
-    top:62%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 99%;
+    position:absolute ;
+    width: 100%;
     height: 100%;
-    z-index: 0;
     color: white;
     border-radius: 25px;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
 }
+div#pecas_home_container {
+    position: absolute;
+    top: 20%;
+    left: 2%;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1%;
+}
+div.peca_home {   
+    border-radius: 15px; 
+    position: relative;
+    border: 2px white solid;
+    background-color: rgb(0, 0, 0);
+    width:240px;
+    height: 40%;
 
+}
 main > h1 {
     margin: 0px;
     font-size: 5rem; 
