--- a/pc.css
+++ b/pc.css
@@ -36,8 +36,8 @@ header {
 }
 header > img { 
     position: absolute;
-    height: 75%;
-    width: 5%;
+    height: 8.5vh;
+    width: 5vw;
     left: 50%;
     z-index: 1;
     transform: translate(-50%);
@@ -57,27 +57,20 @@ header > img {
 #links_acesso { 
     position: absolute;
     top: 15px;
-    right: 1%;
-    width: 250px;
+    right: 2%;
+    width: 150px;
     height: 53%;
-    gap: 4%;
+    gap: 10%;
     display: flex;
     flex-direction: row;
-}
-#links_acesso > input { 
-    background-color: rgb(98, 0, 179);
-    margin-top: 2%;
-    border: 2px solid gray;
-    width: 50%;
-    height: 30px;
 }
 #links_acesso img { 
     position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
+    width: 60px;
+    height: 55px;
 }
 #links_acesso img:hover { 
     scale: 110%;
@@ -102,36 +95,32 @@ nav {
 }
 
 #nav_aberta { 
-    background-image: linear-gradient(to right, rgb(0, 0, 220), rgb(0, 0, 255), rgb(0, 0, 220));
-    visibility: hidden;
-    position: fixed;
-    top: 11%;
-    width: 100%;
-    height: 35%;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
-nav:hover { 
-    filter: brightness(130%);
-}
-#conteudo { 
-    height: 100%;
-    width: 100%;
-    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     gap: 1%;
     overflow-x: auto;
     overflow-y: hidden;
+    background-image: linear-gradient(to right, rgb(0, 0, 220), rgb(0, 0, 255), rgb(0, 0, 220));
+    visibility: hidden;
+    position: fixed;
+    width: 100%;
+    top: 11%;
+    height: 35%;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
+nav:hover { 
+    filter: brightness(130%);
+}
+
 div.imagem_exibição_nav {
     position: relative; 
     top: 50%;
-    left: 7%;
+    left: 13%;
     transform: translate(-50%, -50%);
     border: 2px solid white;
     border-radius: 10px;
-    width: 13%;
+    width: 11%;
     height: 90%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -162,10 +151,9 @@ div.imagem_exibição_nav:hover {
     text-align: center;
     position: relative;
     width: 100%;
-    height: 100%;
-    top: 10%;
+    top: 150px;
     left: 50%;
-    transform: translate(-50%, 50%);
+    transform: translate(-50%);
 }
 
 .escrita_exibição_imagem_nav h1, p {
@@ -173,14 +161,14 @@ div.imagem_exibição_nav:hover {
 }
 .escrita_exibição_imagem_nav  h1 {
     background-color: rgba(0, 0, 0, 0.2);
-    font-size: clamp(1rem, 2vw, 2rem);
+    font-size: clamp(1.1rem, 2vw, 2rem);
 }
 .escrita_exibição_imagem_nav  p {
     background-color: rgba(0, 0, 0, 0.5);
-    font-size: clamp(0.5rem, 2vw, 1.2rem);
+    font-size: clamp(1rem, 2vw, 1.3rem);
 }
 main {
-    margin-top: 6%;
+    top: 10%;
     text-align: center;
     position:absolute ;
     width: 100%;
@@ -191,8 +179,9 @@ main {
 }
 div#pecas_home_container {
     position: absolute;
-    top: 20%;
-    left: 2%;
+    top: 70%;
+    left: 51%;
+    transform: translate(-50%, -50%);
     height: 100%;
     width: 100%;
     display: flex;
@@ -203,23 +192,23 @@ div#pecas_home_container {
 div.peca_home {   
     border-radius: 15px; 
     position: relative;
-    border: 2px white solid;
-    background-color: rgb(0, 0, 0);
-    width:240px;
+    border: 2px rgb(255, 255, 255) solid;
+    background-color: rgb(153, 143, 143);
+    width:245px;
     height: 40%;
-
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
 }
 main > h1 {
-    margin: 0px;
-    font-size: 5rem; 
+    margin: 10px 0px 0px 0px;
     letter-spacing: 1.05rem;
     font-family:'fanky', arial ;
     font-variant: small-caps;
     text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.80);
+    font-size: clamp(5rem, 2vw, 3rem);
 }
 main > h2 {
-    margin: 0px;
-    font-size: 3rem; 
+    margin: 10px 0px 0px 0px;
+    font-size: clamp(2.5rem, 2vw, 2rem); 
     letter-spacing: 1.1rem;
     font-family: arial ;
     font-variant: small-caps;
