--- a/Estilos/artista.css
+++ b/Estilos/artista.css
@@ -1,5 +1,6 @@
 #flex-container {
     position: relative;
+    top: 1%;
     display: flex;
     flex-direction: column;
     gap: 1%;
@@ -29,7 +30,7 @@
 }
 .autor-identificação { 
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
-    background-image: linear-gradient(to right, rgba(4, 0, 255, 0.98), rgba(21, 17, 255, 0.95), rgba(4, 0, 255, 0.98) );
+    background-image: linear-gradient(to right, rgba(100, 0, 218, 0.98), rgba(103, 0, 248, 0.95), rgba(100, 0, 218, 0.98) );
 }
 
 .imagem_exibição_nav {
