--- a/Estilos/Geral.css
+++ b/Estilos/Geral.css
@@ -7,10 +7,14 @@
     font-family: 'fanky';
     src: url(../fontes/FankyBubbleGraffiti-Line.otf);
 }
+* { 
+    scroll-behavior: smooth;
+}
 body {
+    padding: 0px;
     margin: 0%; 
     background-color: rgb(5, 0, 77);
-    overflow-x: hidden;
+    
     font-family: arial;
 }
 ::-webkit-scrollbar {
@@ -46,28 +50,30 @@ header > img {
 }
 #links_acesso { 
     position: absolute;
-    top: 15px;
-    right: 5%;
-    width: 150px;
-    height: 53%;
-    gap: 10%;
+    top: 50%;
+    right: 0%;
+    transform: translate(-0%, -50%);
+    gap: 1%;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
-#links_acesso img { 
+#link_acesso > a { 
     position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 60px;
-    height: 55px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    text-align: justify;
 }
-#links_acesso img:hover { 
-    scale: 110%;
-    transition-duration: 0.5s;
+
+#links_acesso a:hover { 
+    scale: 105%;
+    transition-duration: .6s;
+    transition-timing-function: ease;
 }
 a { 
     color: rgb(190, 119, 119);
+    text-decoration: none;
 }
 nav {
     text-align: center;
@@ -82,36 +88,39 @@ nav {
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
     border: 1px solid rgb(32, 0, 146);
     cursor: pointer;
+    
 }
-
 #nav_aberta { 
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    gap: 1%;
     overflow-x: auto;
     overflow-y: hidden;
     background-image: linear-gradient(to right, rgb(0, 0, 220), rgb(0, 0, 255), rgb(0, 0, 220));
-    visibility: hidden;
+    visibility: visible;
     position: fixed;
     width: 100%;
     top: 11%;
-    height: 35%;
+    height: 0%;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     z-index: 1;
+    align-items: center;
+    gap: 0.2%;
+    transition-duration: .8s;
+    transition-timing-function: ease;
 }
 nav:hover { 
     filter: brightness(130%);
 }
 
 .imagem_exibição_nav {
+    margin: 0px 10px 0px 10px;
+    flex-shrink: 0;
+    flex-grow: 1;
     position: relative; 
-    top: 50%;
-    left: 13%;
-    transform: translate(-50%, -50%);
     border: 2px solid white;
     border-radius: 10px;
-    width: 11%;
+    width: 179px;
     height: 90%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -119,10 +128,12 @@ nav:hover {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.705);
     font-family: arial;
     filter: opacity(150%) grayscale(30%);
+    transition-duration:0.5s;
+    transition-timing-function: ease;
 }
 .imagem_exibição_nav:hover {
-    scale: 100.5%;
-    transition-duration: 0.5s;
+    scale: 105%;
+    
     box-shadow: 0px 0px 10px rgb(255, 255, 255);
     filter: opacity(100%) grayscale(0%);
     .escrita_exibição_imagem_nav h1 { 
@@ -142,7 +153,7 @@ nav:hover {
     text-align: center;
     position: relative;
     width: 100%;
-    top: 150px;
+    top: 50%;
     left: 50%;
     transform: translate(-50%);
 }
@@ -152,18 +163,18 @@ nav:hover {
 }
 .escrita_exibição_imagem_nav  h1 {
     background-color: rgba(0, 0, 0, 0.2);
-    font-size: clamp(1.1rem, 2vw, 2rem);
+    font-size: 2.2rem;
 }
 .escrita_exibição_imagem_nav  p {
     background-color: rgba(0, 0, 0, 0.5);
-    font-size: clamp(1rem, 2vw, 1.3rem);
+    font-size: 1.3rem;
 }
 main {
     top: 10%;
     text-align: center;
     position:absolute ;
-    width: 100%;
-    height: 100%;
+    width: 99%;
+    height: 100vh;
     color: white;
     border-radius: 25px;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
@@ -174,6 +185,7 @@ main > h1 {
     font-family:'fanky', arial ;
     font-variant: small-caps;
     text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.80);
+    font-weight: bolder;
     font-size: clamp(5rem, 2vw, 3rem);
 }
 main > h2 {
@@ -182,16 +194,19 @@ main > h2 {
     letter-spacing: 1.1rem;
     font-family: arial ;
     font-variant: small-caps;
+    font-weight: 700;
     text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.80);
 }
-#botão-voltar { 
+#img-botão-voltar { 
     border-radius: 50%;
     background-color: white;
     position: fixed;
     right: 10px;
     bottom: 35px;
     width: 80px;
+    
 }
+
 footer { 
     background-image: linear-gradient(to right, rgb(0, 0, 30), rgba(0, 0, 50, 0.925), rgb(0, 0, 30));
     font-size: 1.5rem;
@@ -203,28 +218,13 @@ footer {
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.486);
     text-align: center;
 }
+/*Celular*/
 @media screen and (min-width: 320px) and (max-width: 667px) { 
     .escrita_exibição_imagem_nav {
         width: 100%;
         top: 100px;
         left: 50%;
         transform: translate(-50%);
-    }
-    div.imagem_exibição_nav {
-        left: 7%;
-        width: 60px;
-        height: 80%;
-    }
-    #nav_aberta { 
-        gap: 1%;
-        height: 40%;
-    }
-    #links_acesso { 
-        top: 15px;
-        right:90px;
-        width: 110px;
-        height: 53%;
-        gap: 4%;
     }
     header > img { 
         height: 60px;
@@ -240,9 +240,6 @@ footer {
         left: 50%;
         transform: translate(-50%);
     }
-    #links_acesso { 
-        right:10%;
-    }
 }
 @media screen and (min-width: 1024px) and (max-width: 1440px) { 
     header > img { 
@@ -250,8 +247,5 @@ footer {
         width: 80px;
         left: 50%;
         transform: translate(-50%);
-    }
-    #links_acesso { 
-        right:110px;
     }
 }
