--- a/Estilos/artista.css
+++ b/Estilos/artista.css
@@ -3,8 +3,8 @@
     top: 1%;
     display: flex;
     flex-direction: column;
-    gap: 1%;
-    height: 2750px;
+    gap: 5%;
+    height: 2800px;
 }
 .autor-identificação > img { 
     border-radius: 50%;
@@ -20,9 +20,11 @@
     position: relative;
     left: 50%;
     transform: translate(-50%);
-    width: 98%;
+    width: 90%;
     height: 660px;
+    overflow-y: auto;
     
+    text-overflow: ellipsis;
 }
 #flex-container > div:hover { 
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
@@ -33,22 +35,18 @@
     background-image: linear-gradient(to right, rgba(100, 0, 218, 0.98), rgba(103, 0, 248, 0.95), rgba(100, 0, 218, 0.98) );
 }
 
-.imagem_exibição_nav {
-    width: 18%;
-    top: 50%;
-    left: 21%;
-    transform: translate(-50%, -50%);
-  
-}
-#flex-container > div > p { 
-    font-size: 3.5vh;
-    max-height: 200px;
+#flex-container > div > .texto-artista > p { 
+    font-size: clamp(1rem, 2.1rem, 5rem);
     letter-spacing: 1px;
+    font-weight: 400;
     text-shadow: 1px 1px 2px black;
-    width: 100%;
     background-color: rgba(0, 0, 0, 0.938);
+    
+}
+.texto-artista { 
     position: absolute;
-    bottom: 0px;
+    height: 20%;
+    bottom: 0.4px;
 }
 .imagem_do_artista { 
     position: absolute;
