--- a/Estilos/Geral.css
+++ b/Estilos/Geral.css
@@ -39,13 +39,15 @@ header {
      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
         
 }
+
 header > a > img { 
     position: absolute;
     height: 81px;
     width: 95px;
     left: 50%;
+    top: 40%;
     z-index: 1;
-    transform: translate(-50%);
+    transform: translate(-50%, -50%);
     filter: brightness(130%);
     border-radius: 20%;
 }
@@ -287,7 +289,7 @@ footer {
         height: 55px;
         width: 68px;
         left: 10%;
-        transform: translate(-50%);
+        transform: translate(-50%, -50%);
     }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) { 
@@ -299,7 +301,7 @@ footer {
         height: 60px;
         width: 75px;
         left: 50%;
-        transform: translate(-50%);
+        transform: translate(-50%, -50%);
     }
 }
 @media screen and (min-width: 1024px) and (max-width: 1440px) { 
@@ -311,6 +313,7 @@ footer {
         height: 68px;
         width: 80px;
         left: 50%;
-        transform: translate(-50%);
+        top: 40%;
+        transform: translate(-50%, -50%);
     }
 }
