--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -23,6 +23,7 @@ header > a > img {
     height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     transition-duration: .7s;
     transition-timing-function: ease;
 }
@@ -49,12 +50,8 @@ header > a > img {
 }
 #conteudo_opcoes_usuario { 
     position: relative;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column; 
-    align-items: center;
     justify-content: center;
     width: 50%;
     height: 50%;
@@ -73,9 +70,8 @@ header > a > img {
     margin-bottom: 10px;
     border-radius: 50%;
     border: 2px solid rgb(0, 0, 0);
-    width: 210px;
-    height: 210px;
-    
+    width: 212px;
+    height: 212px;
 }
 
 #caixa_arquivo_input {
@@ -83,19 +79,19 @@ header > a > img {
     border: 2px solid black;
     border-radius: 5px; 
     background-color: rgba(255, 255, 255, 0.90);
-    width: 212px;
+    width: 100%;
     height: 32px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.9rem;
     font-weight: bolder;
     color: black;
-    transition-duration: .2s;
-    transition-timing-function: ease;
     box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.5);
 }
 #caixa_arquivo_input:hover { 
     scale: 102%;
     background-color: white;
     transition-timing-function: scale;
+    transition-duration: .2s;
+    transition-timing-function: ease;
 }
