--- a/Estilos/Geral.css
+++ b/Estilos/Geral.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 @font-face {
-    font-family: 'CryshGraffiti';
-    src: url(../fontes/CryshGraffiti-Regular.otf);
-}
-@font-face {
     font-family: 'fanky';
     src: url(../fontes/FankyBubbleGraffiti-Line.otf);
+}
+@font-face {
+    font-family: 'luckiest';
+    src: url(../fontes/LuckiestGuy-Regular.ttf);
 }
 * { 
     scroll-behavior: smooth;
@@ -285,11 +285,13 @@ footer {
     transform: translate(-50%, -50%);
     width: 50%;
     height: 90%;
-    background-color: rgb(74, 1, 170);
+    background-image: linear-gradient(to bottom, rgb(107, 41, 212), rgb(90, 0, 200), rgb(100, 25, 220) );
     border: 2px solid white;
     border-radius: 20px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    
 }
-#caixa_login > form { 
+#caixa_login  form { 
     position: absolute;
     top: 50%;
     left: 50%;
@@ -297,8 +299,53 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    flex-direction: column;
+    flex-wrap: wrap;
+    flex-direction: row;
+    
+}
+#caixa_login  h1 {
+    font-size: 5rem;
+    text-shadow: 2px 2px 2px black;
+    letter-spacing: 5px;
+    font-family: 'luckiest', Arial, Helvetica, sans-serif;
+}
+#caixa_login  form > label { 
+    display: inline-block;
+    cursor: pointer;
+}
+#caixa_login input[type="text"], input[type="password"] { 
+    font-size: 1.5rem;
+    color: black;
+    letter-spacing: 1px;
+    font-weight: bolder;
+    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
+    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.911);
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    width: 80%;
+    height: 35px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    cursor: text;
+}
+#caixa_login #container_botoes > input { 
+    border-radius: 5px;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 1.3rem;
+    color: white;
+    letter-spacing: 1px;
+    font-weight: bolder;
+    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    border: 2px solid black;
+    width: 100%;
+    height: 30px;
+}
+
+
+#caixa_login input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover { 
+    scale: 102%;
+    transition-duration: .3s;
 }
 #caixa_login > label { 
     position: absolute;
