--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -21,9 +21,6 @@ header > a > img {
     background-image: linear-gradient(to right, rgb(0, 0, 220), rgba(0, 0, 255, 0.925), rgb(0, 0, 220));
     width: 35%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     transition-duration: .7s;
     transition-timing-function: ease;
 }
@@ -40,7 +37,6 @@ header > a > img {
 }
 #opções_usuário_abrir_fechar:hover { 
     background-image: linear-gradient(to right, rgb(160, 72, 235), rgba(187, 85, 255, 0.9), rgb(160, 72, 235));
-    
 }
 #seta_menu_opcoes_usuario { 
     position: absolute;
@@ -52,13 +48,13 @@ header > a > img {
     position: relative;
     display: flex;
     flex-direction: column; 
-    justify-content: center;
-    width: 50%;
-    height: 50%;
+    width: 90%;
+    top: 20%;
+    transform: translate(0%, -50%);
+    justify-items: center;
+    align-items: center;
 }
-#container_Foto_usuario { 
-    width: 88%;
-}
+
 #foto_usuario {
     flex-grow: 1;
     flex-shrink: 0;
@@ -79,7 +75,7 @@ header > a > img {
     border: 2px solid black;
     border-radius: 5px; 
     background-color: rgba(255, 255, 255, 0.90);
-    width: 100%;
+    width: 212px;
     height: 32px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
