--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -1,93 +1,111 @@
-header { 
-    background-image: linear-gradient(to right, rgb(100, 0, 182), rgba(110, 0, 196, 0.98), rgb(100, 0, 182) );
-    width: 100%;
-    height: 11%;
-    position: fixed;
-    z-index: 1;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-       
+header {
+  background-image: linear-gradient(
+    to right,
+    rgb(100, 0, 182),
+    rgba(110, 0, 196, 0.98),
+    rgb(100, 0, 182)
+  );
+  width: 100%;
+  height: 11%;
+  position: fixed;
+  z-index: 1;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
 }
-header > a > img { 
-   position: absolute;
-   height: 81px;
-   width: 95px;
-
+header > a > img {
+  position: absolute;
+  height: 81px;
+  width: 95px;
 }
 #links_acesso {
-    top: 50%;
+  top: 50%;
 }
-#opções_usuário { 
-    position: fixed;
-    background-image: linear-gradient(to right, rgb(0, 0, 220), rgba(0, 0, 255, 0.925), rgb(0, 0, 220));
-    width: 35%;
-    height: 100%;
-    transition-duration: .7s;
-    transition-timing-function: ease;
+#opções_usuário {
+  position: fixed;
+  background-image: linear-gradient(
+    to right,
+    rgb(0, 0, 220),
+    rgba(0, 0, 255, 0.925),
+    rgb(0, 0, 220)
+  );
+  width: 35%;
+  height: 100%;
+  transition-duration: 0.7s;
+  transition-timing-function: ease;
 }
-#opções_usuário_abrir_fechar { 
-    position: absolute;
-    cursor: pointer;
-    right: 0%;
-    height: 100%;
-    width: 10%;
-    background-image: linear-gradient(to right, rgb(150, 57, 226), rgba(161, 64, 226, 0.9), rgb(150, 57, 226));
-    box-shadow: -1px 0px 10px rgba(0, 0, 0, 0.5);
-    transition-duration: .7s;
-    transition-timing-function: ease;
+#opções_usuário_abrir_fechar {
+  position: absolute;
+  cursor: pointer;
+  right: 0%;
+  height: 100%;
+  width: 10%;
+  background-image: linear-gradient(
+    to right,
+    rgb(150, 57, 226),
+    rgba(161, 64, 226, 0.9),
+    rgb(150, 57, 226)
+  );
+  box-shadow: -1px 0px 10px rgba(0, 0, 0, 0.5);
+  transition-duration: 0.7s;
+  transition-timing-function: ease;
 }
-#opções_usuário_abrir_fechar:hover { 
-    background-image: linear-gradient(to right, rgb(160, 72, 235), rgba(187, 85, 255, 0.9), rgb(160, 72, 235));
+#opções_usuário_abrir_fechar:hover {
+  background-image: linear-gradient(
+    to right,
+    rgb(160, 72, 235),
+    rgba(187, 85, 255, 0.9),
+    rgb(160, 72, 235)
+  );
 }
-#seta_menu_opcoes_usuario { 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+#seta_menu_opcoes_usuario {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-#conteudo_opcoes_usuario { 
-    position: relative;
-    display: flex;
-    flex-direction: column; 
-    width: 90%;
-    top: 20%;
-    transform: translate(0%, -50%);
-    justify-items: center;
-    align-items: center;
+#conteudo_opcoes_usuario {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  top: 20%;
+  transform: translate(0%, -50%);
+  justify-items: center;
+  align-items: center;
 }
 
 #foto_usuario {
-    flex-grow: 1;
-    flex-shrink: 0;
-    position: relative;
-    background-image: url(../Imagens/usuário_icon_nav.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 10px;
-    border-radius: 50%;
-    border: 2px solid rgb(0, 0, 0);
-    width: 212px;
-    height: 212px;
+  flex-grow: 1;
+  flex-shrink: 0;
+  position: relative;
+  background-image: url(../Imagens/usuário_icon_nav.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  border: 2px solid rgb(0, 0, 0);
+  width: 212px;
+  height: 212px;
 }
 
 #caixa_arquivo_input {
-    position: relative;
-    border: 2px solid black;
-    border-radius: 5px; 
-    background-color: rgba(255, 255, 255, 0.90);
-    width: 212px;
-    height: 32px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.9rem;
-    font-weight: bolder;
-    color: black;
-    box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.5);
+  position: relative;
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.9);
+  width: 212px;
+  height: 32px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+  font-weight: bolder;
+  color: black;
+  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.5);
 }
-#caixa_arquivo_input:hover { 
-    scale: 102%;
-    background-color: white;
-    transition-timing-function: scale;
-    transition-duration: .2s;
-    transition-timing-function: ease;
+#caixa_arquivo_input:hover {
+  scale: 102%;
+  background-color: white;
+  transition-timing-function: scale;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
 }
