--- a/Estilos/Geral.css
+++ b/Estilos/Geral.css
@@ -579,6 +579,55 @@ input[type="button"]:hover {
     left: 10%;
     transform: translate(-50%, -50%);
   }
+  #Caixa_suporte {
+    background-image: linear-gradient(
+      to bottom,
+      rgba(98, 41, 190, 0.993),
+      rgba(101, 40, 199, 0.993),
+      rgba(66, 26, 131, 0.993)
+    );
+    bottom: 14%;
+    width: 30%;
+    height: 70%;
+    letter-spacing: 1px;
+  }
+  #caixa_suporte > h1 {
+    top: 1%;
+  }
+  
+  #container_botoes_suporte {
+    height: 15%;
+  }
+  #container_mensagens {
+    top: 45%;
+    width: 80%;
+    height: 60%;
+    gap: 3%;
+    overflow-y: auto;
+  }
+  #apagar_historico {
+    width: 60px;
+    bottom: 100%;
+    left: 80%;
+  }
+  #avaliar_atendimento {
+    top: 50%;
+    width: 50%;
+    height: 50%;
+    letter-spacing: 2px;
+    font-size: 2rem;
+  }
+  #avaliar_emojis {
+    top: 50%;
+  }
+  #avaliar_emojis img {
+    cursor: pointer;
+    flex-grow: 1;
+    flex-shrink: 1;
+    transition-timing-function: ease;
+    transition-duration: 0.3s;
+    transition-property: scale;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   #links_acesso img {
@@ -590,6 +639,55 @@ input[type="button"]:hover {
     width: 75px;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+  #Caixa_suporte {
+    background-image: linear-gradient(
+      to bottom,
+      rgba(98, 41, 190, 0.993),
+      rgba(101, 40, 199, 0.993),
+      rgba(66, 26, 131, 0.993)
+    );
+    bottom: 14%;
+    width: 30%;
+    height: 70%;
+    letter-spacing: 1px;
+  }
+  #caixa_suporte > h1 {
+    top: 1%;
+  }
+  
+  #container_botoes_suporte {
+    height: 15%;
+  }
+  #container_mensagens {
+    top: 45%;
+    width: 80%;
+    height: 60%;
+    gap: 3%;
+    overflow-y: auto;
+  }
+  #apagar_historico {
+    width: 60px;
+    bottom: 100%;
+    left: 80%;
+  }
+  #avaliar_atendimento {
+    top: 50%;
+    width: 50%;
+    height: 50%;
+    letter-spacing: 2px;
+    font-size: 2rem;
+  }
+  #avaliar_emojis {
+    top: 50%;
+  }
+  #avaliar_emojis img {
+    cursor: pointer;
+    flex-grow: 1;
+    flex-shrink: 1;
+    transition-timing-function: ease;
+    transition-duration: 0.3s;
+    transition-property: scale;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
@@ -603,5 +701,54 @@ input[type="button"]:hover {
     left: 50%;
     top: 40%;
     transform: translate(-50%, -50%);
+  }
+  #Caixa_suporte {
+    background-image: linear-gradient(
+      to bottom,
+      rgba(98, 41, 190, 0.993),
+      rgba(101, 40, 199, 0.993),
+      rgba(66, 26, 131, 0.993)
+    );
+    bottom: 14%;
+    width: 30%;
+    height: 70%;
+    letter-spacing: 1px;
+  }
+  #caixa_suporte > h1 {
+    top: 1%;
+  }
+  
+  #container_botoes_suporte {
+    height: 15%;
+  }
+  #container_mensagens {
+    top: 45%;
+    width: 80%;
+    height: 60%;
+    gap: 3%;
+    overflow-y: auto;
+  }
+  #apagar_historico {
+    width: 60px;
+    bottom: 100%;
+    left: 80%;
+  }
+  #avaliar_atendimento {
+    top: 50%;
+    width: 50%;
+    height: 50%;
+    letter-spacing: 2px;
+    font-size: 2rem;
+  }
+  #avaliar_emojis {
+    top: 65%;
+  }
+  #avaliar_emojis img {
+    cursor: pointer;
+    flex-grow: 1;
+    flex-shrink: 1;
+    transition-timing-function: ease;
+    transition-duration: 0.3s;
+    transition-property: scale;
   }
 }
